# ita-messe-schedule

./: .gitignore  README.md  convert.sh  pyproject.toml  requirements.txt  schedule-ita.fods  schedule-ita.ini  schedule-ita.xlsx  schedule-ita.xml  start_dev_server.sh
.github/workflows/: deploy.yml
